--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,7 @@
         android:id="@+id/action_sobre"
         android:title="@string/action_sobre"
         app:actionLayout="@layout/switch_item" />
+    <item
+        android:id="@+id/action_share"
+        android:title="@string/action_share" />
 </menu>
